# ai-detection

./: .gitignore  CLAUDE.md  gptzero_pipe.py  main.py  pyproject.toml  sapling.sh  sapling_pipe.py  test_sapling_pipe.py
browser-extension/: README.md  build.ts  package.json  tsconfig.json
browser-extension/src/: background.ts  content_script.ts  highlight.ts  options.ts  popup.ts  providers.ts  types.ts
browser-extension/src/core/: ai_detection.js
browser-extension/src/firefox/: ICON_TODO.md  background.js  content_script.js  highlight.js  manifest.json  options.html  options.js  popup.html  popup.js  providers.js
browser-extension/tests/: debug.js  highlight.test.js  highlight.test.ts  package-lock.json  package.json
browser-extension/tests/fixtures/: gptzero_response.json  self_hosting_photos.html
scripts/: gptzero_pipe.py  huggingface.sh  sapling_pipe.py  test_sapling_pipe.py  zerogpt_pipe.py
