[project]
name = "ai-detection"
version = "0.1.0"
description = "AI detection utility tools"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pyright]
include = ["**/*.py"]
exclude = [
    "**/node_modules", 
    "**/__pycache__",
    ".venv"
]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.14"